# wttr-cli-rs

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
src/: main.rs
