[package]
name = "wttr-cli"
version = "0.1.0"
authors = ["R-Udren"]
description = "A lightweight Rust CLI tool to fetch weather information using wttr.in."
license = "MIT"
homepage = "https://github.com/R-udren/wttr-cli-rs"
repository = "https://github.com/R-udren/wttr-cli-rs"
edition = "2021"
categories = ["command-line-utilities", "network-programming"]
keywords = ["wttr", "weather", "cli", "rust"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.9" }
clap = { version = "4.5.23", features = ["usage", "derive"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }


[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
strip = "debuginfo"

